Fixed a formatting issue with short waterfalls being stretched.

--- a/www/pagestyle.css
+++ b/www/pagestyle.css
@@ -23,7 +23,7 @@ h2 .medium {font-weight:normal; line-height: 18px; font-size: 18px;}
 .cleared {display: block;clear: both;}
 .hidden {display: none;}
 .nomargin {margin:0;}
-.progress {min-width: 100px; min-height: 100px; background: url('/images/progress.gif') no-repeat center; }
+.progress {background: url('/images/progress.gif') no-repeat center; }
 .arrow {  border-style: dashed; border-color: transparent; border-width: 0.53em; display: -moz-inline-box; display: inline-block; height: 0; line-height: 0; position: relative; vertical-align: middle; width: 0; }
 .bullet_list {list-style:disc; padding-left: 2em;}
 .bold {font-weight: bold;}
